--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,10 +1,25 @@
-<header>
-  <h1>YadaGuru</h1>
-  <h2>College Application</h2>
-</header>
-<main ng-controller="mainController">
-  <form>
-    <input type="text" id="school-name" placeholder="Enter the name of the college/university"/>
-    <input type="text" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" >
-  </form>
-</main>
+<form>
+  <div class="form-group">
+    <label for="schoolName">College/University Name</label>
+    <input type="text" id="schoolName" 
+      placeholder="Enter the name of the college/university"/>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <label for="submissionDate">Submission Date for Application</label>
+      <p class="input-group">
+        <input type="text" class="form-control" datepicker-popup={{format}}
+                       ng-model="dt" is-open="$parent.opened" min-date="minDate" 
+                       datepicker-options="dateOptions" ng-required="true" 
+                       close-text="Close" />
+       <span class="input-group-btn">
+          <button type="button" class="btn btn-default" ng-click="open($event)">
+            <i class="glyphicon glyphicon-calendar"></i>
+         </button>
+       </span>
+      </p>
+    </div>
+  </div> 
+</form>
+
+
