--- a/yadaApp/templates/main.html
+++ b/yadaApp/templates/main.html
@@ -1,7 +1,7 @@
-<form>
+<form name="reminderForm" novalidate>
   <div class="form-group">
     <label for="schoolName">College/University Name</label>
-    <input type="text" id="schoolName" 
+    <input type="text" id="schoolName" ng-model="schoolName" required
       placeholder="Enter the name of the college/university"/>
   </div>
   <div class="row">
@@ -10,7 +10,7 @@
       <p class="input-group">
         <input type="text" class="form-control" datepicker-popup={{format}}
                        ng-model="dt" is-open="$parent.opened" min-date="minDate" 
-                       datepicker-options="dateOptions" ng-required="true" 
+                       datepicker-options="dateOptions" required 
                        close-text="Close" />
        <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open($event)">
@@ -20,6 +20,13 @@
       </p>
     </div>
   </div> 
+  <div class="row">
+    {{schoolName}}
+    <input type="submit" ng-click="populate()" ng-disabled="reminderForm.$invalid" value="Get My Reminders!"/>
 </form>
 
-
+<div class="reminder-list" ng-repeat="reminder in reminders">
+  <h3>{{reminder.fullName}}</h3>
+  <h4>{{reminder.message}}</h4>
+  <p>{{reminder.detail}}</p>
+</div>
