--- a/yadaApp/templates/main.html
+++ b/yadaApp/templates/main.html
@@ -1,33 +1,45 @@
-<form name="reminderForm" novalidate>
-  <div class="form-group">
-    <label for="schoolName">College/University Name</label>
-    <input type="text" id="schoolName" ng-model="formData.schoolName" required
-      placeholder="Enter the name of the college/university"/>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <label for="submissionDate">Submission Date for Application</label>
-      <p class="input-group">
-        <input type="text" class="form-control" datepicker-popup={{format}}
-                       ng-model="formData.dt" is-open="$parent.opened" min-date="minDate" 
-                       datepicker-options="dateOptions" required 
-                       close-text="Close" />
-       <span class="input-group-btn">
-          <button type="button" class="btn btn-default" ng-click="open($event)">
-            <i class="glyphicon glyphicon-calendar"></i>
-         </button>
-       </span>
-      </p>
+<div class="jumbotron">
+  <form name="reminderForm" novalidate>
+    <div class="form-group">
+      <label for="schoolName">College/University Name</label>
+      <input type="text" id="schoolName" ng-model="formData.schoolName" required
+        placeholder="Enter the name of the college/university"/>
     </div>
-  </div> 
-  <div class="row">
-    <input type="submit" ng-click="getReminders(formData)" ng-disabled="reminderForm.$invalid" value="Get My Reminders!"/>
-</form>
+    <div class="row">
+      <div class="col-md-6">
+        <label for="submissionDate">Submission Date for Application</label>
+        <p class="input-group">
+          <input type="text" class="form-control" datepicker-popup={{format}}
+                         ng-model="formData.dt" is-open="$parent.opened" min-date="minDate" 
+                         datepicker-options="dateOptions" required 
+                         close-text="Close" />
+         <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open($event)">
+              <i class="glyphicon glyphicon-calendar"></i>
+           </button>
+         </span>
+        </p>
+      </div>
+    </div> 
+    <div class="row">
+      <input type="submit" ng-click="getReminders(formData)" ng-disabled="reminderForm.$invalid" value="Get My Reminders!"/>
+    </div>
+  </form>
+</div>
 
 <div class="group-list" ng-repeat="group in groups">
   <h3>To Do By {{group.name}}</h3>
   <div class="reminder-list" ng-repeat="reminder in group.members">
-    <h4>{{reminder.message}}</h4>
-    <p>{{reminder.detail}}</p>
+    <div class="reminderCard">
+      <h4>{{reminder.message}}</h4>
+      <small>{{reminder.detail}}</small>
+    </div>
   </div>
 </div>
+
+
+<script>
+ $('div').on('click', function() {
+   $(this).toggleClass('show-detail');
+ });
+</script>
