--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -1,7 +1,6 @@
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
-  max-width: 600px;
 }
 div {
   position: relative;
@@ -9,39 +8,17 @@ div {
 h1 {
  text-align: center;
  font-size: 75px;
- color: #aaaaaa;
 }
 h2 {
   text-align: center;
-  color: #bbbbbb;
 }
-.reminderCard {
-  background-color: #f3f0f0;
-  border-color: #000;
-  -ms-border-radius: 10px;
-  border-radius: 10px;
-  border-width: 2px;
+.panel-heading a:after {
+  font-family:'Glyphicons Halflings';
+  content:"\e114";
+  float: right;
+  color: grey;
 }
-@media (max-width: 500px) {
-  h1 {
-    font-size: 50px;
-    margin-top: 20px;
-    line-height: 40px;
-  }
-  h2 {
-    font-size: 20px;
-    margin: 20px 0 30px 0;
-  }
-  div {
-    margin: 20px 12px 0 12px;
-  }
-  p {
-    font-size: 20px;
-    line-height: 24px;
-  }
-  small {
-    font-size: 16px;
-  }
+.panel-heading a.collapsed:after {
+  content:"\e080";
 }
-
 
