--- a/yadaApp/templates/main.html
+++ b/yadaApp/templates/main.html
@@ -2,30 +2,27 @@
   <form name="reminderForm" novalidate>
     <div class="form-group">
       <label for="schoolName">College/University Name</label>
-      <input type="text" id="schoolName" ng-model="formData.schoolName" required
+      <input type="text" id="schoolName" class="form-control" 
+             ng-model="formData.schoolName" required
              placeholder="Enter the name of the college/university"/>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <label for="submissionDate">Submission Date for Application</label>
-        <p class="input-group">
-          <input type="text" class="form-control" datepicker-popup={{format}}
-                 ng-model="formData.dt" is-open="$parent.opened" min-date="minDate" 
-                 datepicker-options="dateOptions" required 
-                 close-text="Close" />
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="open($event)">
-              <i class="glyphicon glyphicon-calendar"></i>
-            </button>
-          </span>
-        </p>
-      </div>
+    <div class="form-group">
+      <label for="submissionDate">Submission Date for Application</label>
+      <p class="input-group">
+        <input type="text" class="form-control" datepicker-popup={{format}}
+               ng-model="formData.dt" is-open="$parent.opened" min-date="minDate" 
+               datepicker-options="dateOptions" required 
+               close-text="Close" />
+        <span class="input-group-btn">
+          <button type="button" class="btn btn-default" ng-click="open($event)">
+            <i class="glyphicon glyphicon-calendar"></i>
+          </button>
+        </span>
+      </p>
     </div> 
-    <div class="row">
-      <input type="submit" ng-click="getReminders(formData)" 
-             ng-disabled="reminderForm.$invalid" 
-             value="Get My Reminders!"/>
-    </div>
+    <button type="submit" ng-click="getReminders(formData)" 
+           class="btn btn-primary pull-right"
+           ng-disabled="reminderForm.$invalid">Get My Reminders!</button>
   </form>
 </div>
 
