Fixes UI bugs on mobile screens Fixes issue where YadaGuru heading was too large and throwing off layout. Adds a clearfix to the jumbotron in order to keep the pull-right button in place

--- a/yadaApp/templates/main.html
+++ b/yadaApp/templates/main.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron clearfix">
   <form name="reminderForm" novalidate>
     <div class="form-group">
       <label for="schoolName">College/University Name</label>
