--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -5,13 +5,13 @@ body {
 div {
   position: relative;
 }
-.panel-heading a:after {
+.panel-heading h3:after {
   font-family:'Glyphicons Halflings';
   content:"\e114";
   float: right;
   color: grey;
 }
-.panel-heading a.collapsed:after {
+.panel-heading.collapsed h3:after {
   content:"\e080";
 }
 
