--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -1,9 +1,11 @@
 body {
   font-family: helvetica, sans-serif;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
-div {
+div.container {
   position: relative;
+  max-width: 600px;
 }
 .panel-heading h3:after {
   font-family:'Glyphicons Halflings';
