--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -22,3 +22,22 @@ div.container {
     font-size: 75px;
   }
 }
+
+@media print {
+
+  #reminderForms { display:none; }
+
+  .panel-heading.collapsed h3:after {
+  font-family:'Glyphicons Halflings';
+  content:"\e114";
+  float: right;
+  color: grey;
+  }
+  .collapse {
+    display: block !important;
+    height: auto !important;
+  }
+  div {
+    page-break-inside: avoid;
+  }
+}
