--- a/yadaApp/templates/admin.html
+++ b/yadaApp/templates/admin.html
@@ -1,3 +1,24 @@
-<div ng-controller="adminCtrl">
-  <h1 class="text-center">Admin Page to Come!</h1>
-</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" 
+              data-toggle="collapse" data-target="#navbar-collapse">
+        <span class="sr-only">Toggle Navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="admin">YadaGuru Admin Panel</a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a ui-sref="admin.reminders">Reminders</a></li>
+        <li><a ui-sref="admin.test-dates">Test Dates</a></li>
+      </ul>
+      <p class="navbar-text navbar-right">
+        Signed in as <a ui-sref="admin.test-dates" class ="navbar-link">Test User</a> <a href="#/" class="navbar-link">(Sign-Out)</a>
+      </p>
+    </div>
+  </div>
+</nav>
+<div ui-view></div>
