--- a/yadaApp/templates/main.html
+++ b/yadaApp/templates/main.html
@@ -6,7 +6,7 @@
   <div>
     <alerts></alerts>
   </div>
-  <div class="container"> 
+  <div class="container container-main"> 
     <div class="row">
       <div class="jumbotron clearfix" id="reminderForms">
         <form name="reminderForm" novalidate>
