--- a/yadaApp/templates/modals/admin.reminders.add.html
+++ b/yadaApp/templates/modals/admin.reminders.add.html
@@ -13,6 +13,19 @@
         class="form-control" id="name" placeholder="Reminder name" required/>
     </div>
     <div class="form-group">
+      <label for ="category">Category:</label>
+      <select ng-model="newReminder.category" class="form-control" required>
+        <option value="Absolute Deadline">Absolute Deadline</option>
+        <option value="Portfolio Prep Days">Portfolio Prep Days</option>
+        <option value="Essay Writing">Essay Writing</option>
+        <option value="Recommendations">Recommendations</option>
+        <option value="Application">Application</option>
+        <option value="Testing">Testing</option>
+        <option value="Financial Aid">Financial Aid</option>
+        <option value="General Reminder">General Reminder</option>
+      </select>
+    </div>
+    <div class="form-group">
       <label for ="message">Message:</label>
       <input type="text" ng-model="newReminder.message" 
         class="form-control" id="message" placeholder="Reminder message" required/>
