--- a/yadaApp/css/main.css
+++ b/yadaApp/css/main.css
@@ -23,6 +23,14 @@ div.container-main {
   display: none;
 }
 
+.single-space {
+  margin-bottom: 0px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 @media (min-width: 768px) {
   .page-header h1 {
     font-size: 75px;
