--- a/yadaApp/templates/modals/admin.reminders.edit.html
+++ b/yadaApp/templates/modals/admin.reminders.edit.html
@@ -1,20 +1,21 @@
 <div class="modal-header">
-  <h3 class="modal-title">Add a reminder</h3>
+  <h3 ng-if="context=='add'" class="modal-title">Add a reminder</h3>
+  <h3 ng-if="context=='edit'" class="modal-title">Edit a reminder</h3>
 </div>
 <div class="modal-body">
   <p class="text-info">
     Type <code>%SCHOOL%</code> and <code>%DATE%</code> to display the
     user-selected school name and appropriate reminder date
   </p>
-  <form name="addNewReminderForm" novalidate>
+  <form name="editReminderForm" novalidate>
     <div class="form-group">
       <label for ="name">Name:</label>
-      <input type="text" ng-model="newReminder.name" 
+      <input type="text" ng-model="data.name" 
         class="form-control" id="name" placeholder="Reminder name" required/>
     </div>
     <div class="form-group">
       <label for ="category">Category:</label>
-      <select ng-model="newReminder.category" class="form-control" required>
+      <select ng-model="data.category" class="form-control" required>
         <option value="Absolute Deadline">Absolute Deadline</option>
         <option value="Portfolio Prep Days">Portfolio Prep Days</option>
         <option value="Essay Writing">Essay Writing</option>
@@ -27,29 +28,29 @@
     </div>
     <div class="form-group">
       <label for ="message">Message:</label>
-      <input type="text" ng-model="newReminder.message" 
+      <input type="text" ng-model="data.message" 
         class="form-control" id="message" placeholder="Reminder message" required/>
     </div>
     <div class="form-group">
       <label for ="detail">Detail:</label>
-      <textarea ng-model="newReminder.detail" class="form-control" 
+      <textarea ng-model="data.detail" class="form-control" 
         id="detail" rows="3" placeholder="Details for the reminder" required></textarea>
     </div>
     <div class="form-group">
       <label for ="late-message">Late Message:</label>
-      <input type="text" ng-model="newReminder.lateMessage" 
+      <input type="text" ng-model="data.lateMessage" 
         class="form-control" id="late-message" placeholder="Late reminder message" required/>
     </div>
     <div class="form-group">
       <label for ="late-detail">Late Detail:</label>
-      <textarea ng-model="newReminder.lateDetail" class="form-control" 
+      <textarea ng-model="data.lateDetail" class="form-control" 
         id="late-detail" rows="3" placeholder="Details for the late reminder" required></textarea>
     </div>
     <div class="form-group">
       <label for ="timeframe">
         Timeframe (press <kbd>ctrl</kbd> while clicking to select multiple timeframes):
       </label>
-      <select ng-model="newReminder.timeframe" multiple class="form-control" required>
+      <select ng-model="data.timeframes" multiple class="form-control" required>
         <option value="summer">Summer</option>
         <option value="90">90 Days</option>
         <option value="60">60 Days</option>
@@ -65,7 +66,11 @@
     </div>
 </div>
 <div class="modal-footer">
-  <button class="btn" ng-class="addNewReminderForm.$invalid ? 'btn-default' : 'btn-primary'" 
-    ng-disabled="addNewReminderForm.$invalid" ng-click="save(newReminder)">Save</button>
+  <button class="btn btn-danger pull-left" ng-if="context =='edit'"
+    ng-click="delete(data._id)">Delete Reminder</button>
+  <button class="btn" ng-class="editReminderForm.$invalid ? 'btn-default' : 'btn-primary'" 
+    ng-disabled="editReminderForm.$invalid" ng-if="context =='add'" ng-click="add(data)">Add</button>
+  <button class="btn" ng-class="editReminderForm.$invalid ? 'btn-default' : 'btn-primary'" 
+    ng-disabled="editReminderForm.$invalid" ng-if="context == 'edit'" ng-click="save(data)">Save</button>
   <button class="btn" ng-click="cancel()">Cancel</button>
 </div>
