--- a/yadaApp/templates/admin.html
+++ b/yadaApp/templates/admin.html
@@ -12,8 +12,8 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a ui-sref="admin.reminders">Reminders</a></li>
-        <li><a ui-sref="admin.test-dates">Test Dates</a></li>
+        <li ng-class="currentTab === '/reminders' ? 'active' : ''"><a ui-sref="admin.reminders">Reminders</a></li>
+        <li ng-class="currentTab === '/test-dates' ? 'active' : ''"><a ui-sref="admin.test-dates">Test Dates</a></li>
       </ul>
       <p class="navbar-text navbar-right">
         Signed in as <a ui-sref="admin.test-dates" class ="navbar-link">Test User</a> <a href="#/" class="navbar-link">(Sign-Out)</a>
