--- a/yadaApp/templates/modals/admin.test-dates.edit.html
+++ b/yadaApp/templates/modals/admin.test-dates.edit.html
@@ -4,19 +4,19 @@
 </div>
 <div class="modal-body">
   <form name="editTestDateForm" novalidate>
-    <div class="form-group">
-      <label for ="testDate">Test Date:</label>
-      <input type="text" ng-model="data.testDate" 
-        class="form-control" id="testDate" placeholder="mm/dd/yyyy" required/>
+    <div class="form-group" show-errors>
+      <label class="control-label" for="testDate">Test Date:</label>
+      <input type="text" ng-model="data.testDate" ng-pattern=/^([1-9]|0[1-9]|1[012])[-\/.]([1-9]|0[1-9]|[12][0-9]|3[01])[-\/.](\d\d)|((19|20)\d\d)$/
+      name="testDate" class="form-control" id="testDate" placeholder="mm/dd/yyyy" required/>
     </div>
-    <div class="form-group">
-      <label for ="registrationDate">Registration Date:</label>
-      <input type="text" ng-model="data.registrationDate" 
-        class="form-control" id="registrationDate" placeholder="mm/dd/yyyy" required/>
+    <div class="form-group" show-errors>
+      <label class="control-label" for="registrationDate">Registration Date:</label>
+      <input type="text" ng-model="data.registrationDate" ng-pattern=/^([1-9]|0[1-9]|1[012])[-\/.]([1-9]|0[1-9]|[12][0-9]|3[01])[-\/.](\d\d)|((19|20)\d\d)$/
+        name="registrationDate" class="form-control" id="registrationDate" placeholder="mm/dd/yyyy" required/>
     </div>
-    <div class="form-group">
-      <label for ="testType">Test Type:</label>
-      <select ng-model="data.testType" class="form-control" required>
+    <div class="form-group" show-errors>
+      <label class="control-label" for="testType">Test Type:</label>
+      <select ng-model="data.testType" name="testType" id="testType" class="form-control" required>
         <option value="SAT">SAT</option>
         <option value="ACT">ACT</option>
       </select>
@@ -24,9 +24,7 @@
 <div class="modal-footer">
   <button class="btn btn-danger pull-left" ng-if="context =='edit'"
     ng-click="delete(data._id)">Delete Test Date</button>
-  <button class="btn" ng-class="editTestDateForm.$invalid ? 'btn-default' : 'btn-primary'" 
-    ng-disabled="editTestDateForm.$invalid" ng-if="context =='add'" ng-click="add(data)">Add</button>
-  <button class="btn" ng-class="editTestDateForm.$invalid ? 'btn-default' : 'btn-primary'" 
-    ng-disabled="editTestDateForm.$invalid" ng-if="context == 'edit'" ng-click="save(data)">Save</button>
+  <button class="btn btn-primary" ng-if="context == 'add'" ng-click="add(data)">Add</button>
+  <button class="btn btn-primary" ng-if="context == 'edit'" ng-click="save(data)">Save</button>
   <button class="btn" ng-click="cancel()">Cancel</button>
 </div>
