Adds bootstrap styling to root page. Removes console.logs in controller

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -46,6 +46,11 @@ div.container-main {
   text-align: right;
 }
 
+.reminder {
+  padding-left: 20px;
+  margin-bottom: 30px;
+}
+
 @media (min-width: 768px) {
   .page-header h1 {
     font-size: 75px;
