--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -80,7 +80,7 @@ body {
 [ng\:cloak] {
 	display: none !important;
 }
-div.container-main {
+div.container {
 	position: relative;
 	max-width: 600px;
 }
