--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,7 +1,11 @@
 body {
   font-family: helvetica, sans-serif;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background-image: url("assets/paper.jpg");
+  backround-repeat: no-repeat;
+  background-size: cover;
+}
 
 [ng-cloak] {
   display: none !important; }
@@ -67,3 +71,12 @@ body {
 div.container {
   position: relative;
   max-width: 600px; }
+
+h1 {
+  font-family: "Rock Salt", cursive;
+  @include fadeIn;
+}
+
+h2 {
+  font-family: 'Graduate';
+}
