moved style changed to .scss

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -85,3 +85,11 @@ div.container {
 	max-width: 600px;
 }
 
+h1 {
+  font-family: "Rock Salt", cursive;
+  @include fadeIn;
+}
+
+h2 {
+  font-family: 'Graduate';
+}
