Moved body style to .scss

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,6 +10,9 @@ body {
 	font-family: $font_1, $font_2;
 	margin: 0;
 	padding: 0;
+    background-image: url("assets/paper.jpg");
+    backround-repeat: no-repeat;
+    background-size: cover;
 }
 [ng-cloak] {
 	display: none !important;
