--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,7 +2,9 @@ body {
   font-family: helvetica, sans-serif;
   margin: 0;
   padding: 0;
-}
+  background-image: url("assets/paper.jpg");
+  backround-repeat: no-repeat;
+  background-size: cover; }
 
 [ng-cloak] {
   display: none !important; }
@@ -68,3 +70,12 @@ body {
 div.container {
   position: relative;
   max-width: 600px; }
+
+h1 {
+  font-family: "Rock Salt", cursive; }
+
+h2 {
+  font-family: 'Graduate'; }
+
+.reminder-box {
+  background-color: #66C285; }
