Added static route for serving assets Moved assets folder inside client Adjusted scss for changed route

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,7 +10,7 @@ body {
 	font-family: $font_1, $font_2;
 	margin: 0;
 	padding: 0;
-    background-image: url(yadaguru-app/assets/paper.jpg);
+    background-image: url(../assets/paper.jpg);
     backround-repeat: no-repeat;
     background-size: cover;
 }
