--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,8 +1,10 @@
 body {
   font-family: helvetica, sans-serif;
   margin: 0;
-  padding: 0;
-  background-image: url("assets/paper.jpg");
+  padding: 0; }
+
+.root-body {
+  background-image: url(../assets/paper.jpg);
   backround-repeat: no-repeat;
   background-size: cover; }
 
@@ -44,6 +46,22 @@ body {
   padding-left: 20px;
   margin-bottom: 30px; }
 
+div.container {
+  position: relative;
+  max-width: 600px; }
+
+h1 {
+  font-family: "Rock Salt", cursive; }
+
+h2 {
+  font-family: 'Graduate'; }
+
+.reminder-box {
+  background-color: #66C285; }
+
+.no-bottom-border {
+  border-bottom: none; }
+
 @media (min-width: 768px) {
   .page-header h1 {
     font-size: 75px; } }
@@ -66,16 +84,3 @@ body {
 
 [ng\:cloak] {
   display: none !important; }
-
-div.container {
-  position: relative;
-  max-width: 600px; }
-
-h1 {
-  font-family: "Rock Salt", cursive; }
-
-h2 {
-  font-family: 'Graduate'; }
-
-.reminder-box {
-  background-color: #66C285; }
