Adds textAngular elements to FAQ

--- a/client/admin/templates/faqs.html
+++ b/client/admin/templates/faqs.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
     <h2>Frequently Asked Questions</h2>
+    <div text-angular ng-model="htmlVariable"></div>
   </div>
 </div>
