Namespaces root-only styles

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -13,11 +13,6 @@ body {
 	padding: 0;
 }
 
-.root-body {
-  background-image: url(../assets/paper.jpg);
-  backround-repeat: no-repeat;
-  background-size: cover;
-}
 
 [ng-cloak] {
 	display: none !important;
@@ -71,17 +66,26 @@ body {
 	margin-bottom: 30px;
 }
 
-div.container {
-	position: relative;
-	max-width: 600px;
-}
 
-h1 {
-  font-family: "Rock Salt", cursive;
-}
+.root {
 
-h2 {
-  font-family: 'Graduate';
+  background-image: url(../assets/paper.jpg);
+  backround-repeat: no-repeat;
+  background-size: cover;
+
+  div.container {
+    position: relative;
+    max-width: 600px;
+  }
+
+  h1 {
+    font-family: "Rock Salt", cursive;
+  }
+
+  h2 {
+    font-family: 'Graduate';
+  }
+
 }
 
 .reminder-box {
