--- a/client/css/main.css
+++ b/client/css/main.css
@@ -3,11 +3,6 @@ body {
   margin: 0;
   padding: 0; }
 
-.root-body {
-  background-image: url(../assets/paper.jpg);
-  backround-repeat: no-repeat;
-  background-size: cover; }
-
 [ng-cloak] {
   display: none !important; }
 
@@ -46,15 +41,17 @@ body {
   padding-left: 20px;
   margin-bottom: 30px; }
 
-div.container {
-  position: relative;
-  max-width: 600px; }
-
-h1 {
-  font-family: "Rock Salt", cursive; }
-
-h2 {
-  font-family: 'Graduate'; }
+.root {
+  background-image: url(../assets/paper.jpg);
+  backround-repeat: no-repeat;
+  background-size: cover; }
+  .root div.container {
+    position: relative;
+    max-width: 600px; }
+  .root h1 {
+    font-family: "Rock Salt", cursive; }
+  .root h2 {
+    font-family: 'Graduate'; }
 
 .reminder-box {
   background-color: #66C285; }
