Styles faq page. Adds a (not yet functional) save button

--- a/client/admin/templates/faqs.html
+++ b/client/admin/templates/faqs.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
     <h2>Frequently Asked Questions</h2>
-    <div text-angular ng-model="htmlVariable"></div>
+    <button class="btn btn-primary pull-right">Save Changes</button>
+    <div class="clearfix"></div>
+    <div class="text-editor" text-angular ng-model="htmlVariable"></div>
   </div>
 </div>
