Makes FAQ editor functional

--- a/client/admin/templates/faqs.html
+++ b/client/admin/templates/faqs.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <h2>Frequently Asked Questions</h2>
-    <button class="btn btn-primary pull-right">Save Changes</button>
+    <button class="btn btn-primary pull-right" ng-click="saveFaqContent()">Save Changes</button>
     <div class="clearfix"></div>
-    <div class="text-editor" text-angular ng-model="htmlVariable"></div>
+    <div class="text-editor" text-angular ng-model="faqContent"></div>
   </div>
 </div>
