--- a/client/root/templates/faqs.html
+++ b/client/root/templates/faqs.html
@@ -3,6 +3,7 @@
     <div class="panel body">
       <h2 class="text-center">Frequently Asked Questions</h2>
       <p class="text-center"><a ui-sref="main">Back to Form</a></p>
+       <div ng-bind-html="faqContent"></div>
     </div>
   </div>
 </div>
