--- a/client/root/templates/faqs.html
+++ b/client/root/templates/faqs.html
@@ -1,9 +1,7 @@
 <div class="container">
-  <div class="panel panel-default">
-    <div class="panel body">
-      <h2 class="text-center">Frequently Asked Questions</h2>
-      <p class="text-center"><a ui-sref="main">Back to Form</a></p>
-       <div ng-bind-html="faqContent"></div>
-    </div>
+  <div class="col-sm-8 col-sm-offset-2">
+    <h2 class="text-center">Frequently Asked Questions</h2>
+    <p class="text-center"><a ui-sref="main">Back to Form</a></p>
+    <div ng-bind-html="faqContent"></div>
   </div>
 </div>
