--- a/client/admin/templates/reminders.html
+++ b/client/admin/templates/reminders.html
@@ -13,7 +13,7 @@
       <tbody>
         <tr class="cursor-pointer" ng-repeat="reminder in reminders" ng-click="openEditModal('edit', reminder)">
           <td>{{reminder.name}}</td>
-          <td>{{reminder.category}}</td>
+          <td>{{reminder.categoryName}}</td>
           <td>{{reminder.message}}</td>
           <td>
             <p class="single-space text-nowrap" ng-repeat="timeframe in reminder.timeframes">{{addTimeframeSuffix(timeframe)}}</p>
