--- a/client/admin/templates/test-messages.html
+++ b/client/admin/templates/test-messages.html
@@ -28,9 +28,9 @@
       </div>
       <div class="form-group" show-errors>
         <label class="control-label" for="testCategory">Testing Category:</label>
-        <select ng-model="data.testCategory" class="form-control" name="testCategory"
+        <select ng-options="category._id as category.categoryName for category in categories"
+                ng-model="data.testCategory" class="form-control" name="testCategory"
                 id="testCategory" required>
-          <option ng-repeat="category in categories" value="{{ category._id }}">{{ category.categoryName }}</option>
         </select>
       </div>
       <button class="btn btn-primary" ng-click="save(data)">Save</button>
