Added Code for Philly logo to index page

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -145,3 +145,21 @@ body {
 	display: none !important;
 }
 
+.logo {
+  float: left;
+  height: 180px;
+  width: 111px;
+  margin-left: 20px;
+
+}
+.image-wrapper {
+  float: left;
+  height: 170px;
+  width: 250px;
+  margin-left: 20px;
+}
+.image-wrapper p {
+  position: absolute;
+  margin: 5px;
+
+}
