--- a/client/css/main.css
+++ b/client/css/main.css
@@ -87,3 +87,19 @@ body {
 
 [ng\:cloak] {
   display: none !important; }
+
+.logo {
+  float: left;
+  height: 180px;
+  width: 111px;
+  margin-left: 20px; }
+
+.image-wrapper {
+  float: left;
+  height: 170px;
+  width: 250px;
+  margin-left: 20px; }
+
+.image-wrapper p {
+  position: absolute;
+  margin: 5px; }
